# Parallax-Mapping-2D-Images

./: .gitignore  .gitmodules  README.md
Depth Estimation Models/Depth-Anything-V2/: DAV2.ipynb  run.py
Depth Estimation Models/Depth-Anything-V2/Test_Images/: DepthTest.m4v
Depth Estimation Models/Depth-Anything-V2/metric_depth/: MD.ipynb
Depth Estimation Models/Marigold/: mari.ipynb
Depth Estimation Models/ml-depth-pro/: DP.ipynb
Depth Normals Estimation Models/DSINE/: .gitignore  DSINE_test.ipynb  test_minimal.py
Depth Normals Estimation Models/DSINE/notes/: depth_to_normal.ipynb
Depth Normals Estimation Models/DSINE/projects/dsine/: DSINE_test.ipynb  config.py  test_minimal.py
Depth Normals Estimation Models/DSINE/projects/dsine/dsine/exp001_cvpr2024/dsine/log/: params.txt
Depth Normals Estimation Models/DSINE/projects/dsine/samples/output/: zoo.npy
Depth Normals Estimation Models/DSINE/projects/dsine/samples/output/dsine/log/: params.txt
Intrinsic Image Decomposition/Intrinsic/: Intrinsic_Test.ipynb  intrinsic_inference.ipynb
Main Program/: CMakeLists.txt
Main_Program/: CMakeLists.txt  README.md
Main_Program/include/: GLWindow.h  Image.h  ImageData.h  camera.h  mesh.h  model.h  shader.h
Main_Program/shaders/: ImageFragment.glsl  ImageVertex.glsl
Main_Program/src/: GLWindow.cpp  Image.cpp  ImageData.cpp  main.cpp
Main_Program/tests/: Image_Tests.cpp
Notebooks/: DAV2.ipynb  DSINE_test.ipynb  Intrinsic_Test.ipynb  README.md
